# internal/handler/routes.go
@@ -4,6 +4,7 @@ import (
 	"embed"
 
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
@@ -13,7 +14,10 @@ var static embed.FS
 //go:embed assets/*
 var assets embed.FS
 
-func (h *Handler) addRoutes(e *echo.Echo) {
+// maxFileSize is the maximum size of a file that can be uploaded
+const maxFileSize = "15M"
+
+func (h *Handler) setupRoutes(e *echo.Echo) {
 	e.StaticFS("/static/*", echo.MustSubFS(static, "static"))
 	e.StaticFS("/assets/*", echo.MustSubFS(assets, "assets"))
 
@@ -24,6 +28,8 @@ func (h *Handler) addRoutes(e *echo.Echo) {
 	e.GET("/generate", h.CreatePdfFromHtmlView)
 	e.GET("/merge", h.MergePdfsView)
 
-	e.POST("/generate", h.GeneratePdfFromHTML)
-	e.POST("/merge", h.MergePdfs)
+	api := e.Group("/pdf")
+	api.Use(middleware.BodyLimit(maxFileSize))
+	api.POST("/generate", h.GeneratePdfFromHTML)
+	api.POST("/merge", h.MergePdfs)
 }
